New features: - 3511055: Possibility to force re-crawl on URL(s) - 3511054: Deletion support in URL database

--- a/WebContent/WEB-INF/zul/crawler/web/url.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/url.zul
@@ -164,6 +164,8 @@
 					<listitem label="Update to Unfetched (re-crawl)"
 						value="setToUnfetched" />
 					<listitem label="Delete URLs" value="deleteUrls" />
+					<listitem label="Optimize URL database"
+						value="optimize" />
 				</listbox>
 				<button label="Go" forward="onGo" />
 			</listfooter>
