--- a/WebContent/WEB-INF/zul/crawler/web/url.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/url.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -164,6 +164,8 @@
 					<listitem label="Update to Unfetched (re-crawl)"
 						value="setToUnfetched" />
 					<listitem label="Delete URLs" value="deleteUrls" />
+					<listitem label="Optimize URL database"
+						value="optimize" />
 				</listbox>
 				<button label="Go" forward="onGo" />
 			</listfooter>
