--- a/WebContent/WEB-INF/zul/runtime/index.zul
+++ b/WebContent/WEB-INF/zul/runtime/index.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2011 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -37,7 +37,9 @@
 			<tab id="tabRuntimeOpenSearch" label="OpenSearch"
 				visible="@{runtime.isQueryRights}" />
 			<tab id="tabRuntimeCrawlCache" label="Crawl cache"
-				visible="@{runtime.adminOrMonitoringOrNoUser}" />
+				visible="@{runtime.adminOrNoUser}" />
+			<tab id="tabRuntimeOcr" label="OCR"
+				visible="@{runtime.adminOrNoUser}" />
 		</tabs>
 		<tabpanels>
 			<tabpanel>
@@ -66,6 +68,9 @@
 			</tabpanel>
 			<tabpanel fulfill="tabRuntimeCrawlCache.onSelect">
 				<include src="WEB-INF/zul/runtime/crawlCache.zul" />
+			</tabpanel>
+			<tabpanel fulfill="tabRuntimeOcr.onSelect">
+				<include src="WEB-INF/zul/runtime/ocr.zul" />
 			</tabpanel>
 		</tabpanels>
 	</tabbox>
