--- a/WebContent/WEB-INF/zul/runtime/advanced.zul
+++ b/WebContent/WEB-INF/zul/runtime/advanced.zul
@@ -15,8 +15,8 @@
 	If not, see <http://www.gnu.org/licenses/>.
 -->
 <window id="window"
-	apply="com.jaeksoft.searchlib.web.controller.runtime.OcrComposer">
-	<panel title="OCR" border="normal">
+	apply="com.jaeksoft.searchlib.web.controller.runtime.AdvancedComposer">
+	<panel title="Advanced" border="normal">
 		<panelchildren>
 			<grid>
 				<columns>
@@ -26,21 +26,27 @@
 				</columns>
 				<rows>
 					<row>
-						<label value="Enabled" />
+						<label value="Enabled OCR" />
 						<checkbox
 							checked="@{window$composer.ocrManager.enabled}" />
 						<space />
 					</row>
 					<row>
 						<label value="Tesseract path" />
-						<textbox cols="80"
-							value="@{window$composer.ocrManager.tesseractPath}" />
+						<cell>
+							<textbox cols="80"
+								value="@{window$composer.ocrManager.tesseractPath}" />
+							<button id="check" label="Check" />
+						</cell>
 						<label
 							value="Enter the path to the Tesseract executable Eg.: /usr/local/bin/tesseract" />
 					</row>
 					<row>
-						<cell />
-						<button id="check" label="Check" />
+						<label value="Maximum number of clauses" />
+						<intbox cols="5"
+							value="@{window$composer.maxClauseCount.value}" />
+						<label
+							value="Set the maximum number of clauses permitted per boolean query. Default value is 1024" />
 					</row>
 				</rows>
 			</grid>
