--- a/WebContent/WEB-INF/zul/runtime/index.zul
+++ b/WebContent/WEB-INF/zul/runtime/index.zul
@@ -38,7 +38,7 @@
 				visible="@{runtime.isQueryRights}" />
 			<tab id="tabRuntimeCrawlCache" label="Crawl cache"
 				visible="@{runtime.adminOrNoUser}" />
-			<tab id="tabRuntimeOcr" label="OCR"
+			<tab id="tabRuntimeAdvanced" label="Advanced"
 				visible="@{runtime.adminOrNoUser}" />
 		</tabs>
 		<tabpanels>
@@ -69,8 +69,8 @@
 			<tabpanel fulfill="tabRuntimeCrawlCache.onSelect">
 				<include src="WEB-INF/zul/runtime/crawlCache.zul" />
 			</tabpanel>
-			<tabpanel fulfill="tabRuntimeOcr.onSelect">
-				<include src="WEB-INF/zul/runtime/ocr.zul" />
+			<tabpanel fulfill="tabRuntimeAdvanced.onSelect">
+				<include src="WEB-INF/zul/runtime/advanced.zul" />
 			</tabpanel>
 		</tabpanels>
 	</tabbox>
