--- a/WebContent/WEB-INF/zul/query/resultSpellCheck.zul
+++ b/WebContent/WEB-INF/zul/query/resultSpellCheck.zul
@@ -15,12 +15,69 @@
 	If not, see <http://www.gnu.org/licenses/>.
 -->
 <window id="resultSpellCheck"
-	use="com.jaeksoft.searchlib.web.controller.query.SpellCheckController">
-	<panel title="Summary" visible="@{resultSpellCheck.resultSpellCheck}"
-		collapsible="true" border="normal">
+	use="com.jaeksoft.searchlib.web.controller.query.ResultSpellCheckController">
+	<panel title="Summary"
+		visible="@{resultSpellCheck.resultSpellCheck}" collapsible="true"
+		border="normal">
 		<caption>
 			<button label="XML/HTTP API call" target="_blank"
 				href="@{query.requestApiCall}" />
 		</caption>
+		<panelchildren>
+			<listbox
+				model="@{resultSpellCheck.result.spellCheckList}">
+				<listitem self="@{each='spellCheck'}">
+					<listcell>
+						<separator />
+						<panel title="" collapsible="true">
+							<caption>
+								<hbox width="100%">
+									<label value="Field: " />
+									<label
+										value="@{spellCheck.fieldName}" />
+								</hbox>
+							</caption>
+							<panelchildren>
+								<listbox model="@{spellCheck.list}">
+									<listitem self="@{each=item}">
+										<listcell>
+											<panel title="">
+												<caption>
+													<hbox
+														width="100%">
+														<label
+															value="Query term: " />
+														<label
+															value="@{item.word}" />
+													</hbox>
+												</caption>
+												<panelchildren>
+													<listbox
+														sizedByContent="true" model="@{item.suggestions}">
+														<listhead>
+															<listheader
+																label="Suggested term" />
+															<listheader
+																label="Frequency" />
+														</listhead>
+														<listitem
+															self="@{each=suggestItem}" label="@{suggestItem}">
+															<listcell
+																label="@{suggestItem.term}" />
+															<listcell
+																label="@{suggestItem.freq}" />
+														</listitem>
+													</listbox>
+												</panelchildren>
+											</panel>
+										</listcell>
+									</listitem>
+								</listbox>
+							</panelchildren>
+						</panel>
+					</listcell>
+				</listitem>
+			</listbox>
+		</panelchildren>
 	</panel>
 </window>
