Bug fix 3531057: crawling always fails when using proxy

--- a/WebContent/WEB-INF/zul/crawler/web/proxy.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/proxy.zul
@@ -35,7 +35,7 @@
 			</row>
 			<row>
 				<label value="Proxy Port :" />
-				<textbox id="proxyPort" width="35%" value="@{proxy.properties.proxyPort.value}"/>
+				<intbox id="proxyPort" width="35%" value="@{proxy.properties.proxyPort.value}"></intbox>
 				<space />
 			</row>
 			
