--- a/WebContent/WEB-INF/zul/runtime/advanced.zul
+++ b/WebContent/WEB-INF/zul/runtime/advanced.zul
@@ -42,6 +42,17 @@
 							value="Enter the path to the Tesseract executable Eg.: /usr/local/bin/tesseract" />
 					</row>
 					<row>
+						<label value="Tesseract default language" />
+						<listbox mold="select"
+							selectedItem="@{window$composer.ocrManager.defaultLanguage}"
+							model="@{window$composer.languageEnum}">
+							<listitem self="@{each=langEnum}"
+								label="@{langEnum.name}" value="@{langEnum}" />
+						</listbox>
+						<label
+							value="Enter the default language used by Tesseract" />
+					</row>
+					<row>
 						<label value="Maximum number of clauses" />
 						<intbox cols="5"
 							value="@{window$composer.maxClauseCount.value}" />
