New feature 3537132: JBIG2 format support for PDF text extraction IcePdf integration

--- a/WebContent/WEB-INF/zul/schema/parser/edit.zul
+++ b/WebContent/WEB-INF/zul/schema/parser/edit.zul
@@ -38,6 +38,13 @@
 								value="@{parser.currentParser.parserType.name}" />
 							<label value="The type of this parser" />
 						</row>
+						<row>
+							<label value="Fail over" />
+							<combobox model="@{parser.failOverList}"
+								value="@{parser.currentParser.failOverParserName}" />
+							<label
+								value="Choose a parser used in case of failure" />
+						</row>
 					</rows>
 				</grid>
 				<grid model="@{parser.currentParser.userProperties}">
