--- a/WebContent/WEB-INF/zul/schema/parser/index.zul
+++ b/WebContent/WEB-INF/zul/schema/parser/index.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2011 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2011-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -15,7 +15,7 @@
 	If not, see <http://www.gnu.org/licenses/>.
 -->
 <window id="parser"
-	use="com.jaeksoft.searchlib.web.controller.schema.ParserController">
+	use="com.jaeksoft.searchlib.web.controller.schema.ParserController">	
 	<include visible="@{parser.isNotEditing}"
 		src="WEB-INF/zul/schema/parser/list.zul" />
 	<include visible="@{parser.isEditing}"
