Fixes a wrong display in the source column of the database crawler user interface

--- a/WebContent/WEB-INF/zul/crawler/database/crawl.zul
+++ b/WebContent/WEB-INF/zul/crawler/database/crawl.zul
@@ -259,7 +259,8 @@
 								</auxheader>
 							</auxhead>
 							<listitem self="@{each='fieldlink'}">
-								<listcell label="@{fieldlink.source}" />
+								<listcell
+									label="@{fieldlink.source.uniqueName}" />
 								<listcell label="@{fieldlink.target}" />
 								<listcell>
 									<checkbox disabled="true"
