--- a/WebContent/WEB-INF/zul/home.zul
+++ b/WebContent/WEB-INF/zul/home.zul
@@ -16,150 +16,124 @@
 -->
 <window id="home"
 	use="com.jaeksoft.searchlib.web.controller.HomeController">
-	<panel title="Create a new index" border="normal"
-		visible="@{home.adminOrNoUser}">
-		<panelchildren>
-			<grid width="100%">
-				<columns sizable="false">
-					<column align="right" hflex="min" />
-					<column align="left" hflex="min" />
-					<column align="left" />
-					<column width="200px" />
-				</columns>
-				<rows>
-					<row>
-						<label value="Index name: " />
-						<textbox value="@{home.newIndexName}"
-							cols="50" />
-						<label
-							value="Choose a name for the index that will be created" />
-						<cell rowspan="3">
-							<iframe src="@{home.version.updateUrl}"
-								width="250px" height="100px" scrolling="false" />
-						</cell>
-					</row>
-					<row>
-						<label value="Template: " />
-						<listbox mold="select"
-							selectedItem="@{home.newIndexTemplate}"
-							model="@{home.templateList}">
-							<listitem self="@{each=telist}"
-								label="@{telist.template.publicName}" />
-						</listbox>
-						<label
-							value="@{home.newIndexTemplate.template.description}" />
-					</row>
-					<row>
-						<cell />
-						<button label="Create" forward="onNewIndex" />
-						<cell />
-					</row>
-				</rows>
-			</grid>
-		</panelchildren>
-	</panel>
+	<grid visible="@{home.adminOrNoUser}">
+		<auxhead>
+			<auxheader colspan="4" label="Create a new index" />
+		</auxhead>
+		<columns sizable="false">
+			<column align="right" hflex="min" label="Field" />
+			<column align="left" hflex="min" label="Value" />
+			<column align="left" label="Help" />
+			<column width="82px" />
+		</columns>
+		<rows>
+			<row>
+				<label value="Index name: " />
+				<textbox value="@{home.newIndexName}" cols="50" />
+				<label
+					value="Choose a name for the index that will be created" />
+				<cell rowspan="3">
+					<image width="82px" height="79px"
+						src="/images/oss_logo.png" />
+				</cell>
+			</row>
+			<row>
+				<label value="Template: " />
+				<listbox mold="select"
+					selectedItem="@{home.newIndexTemplate}"
+					model="@{home.templateList}">
+					<listitem self="@{each=telist}"
+						label="@{telist.template.publicName}" />
+				</listbox>
+				<label
+					value="@{home.newIndexTemplate.template.description}" />
+			</row>
+			<row>
+				<cell />
+				<button label="Create" forward="onNewIndex" />
+				<cell />
+			</row>
+		</rows>
+	</grid>
 	<separator height="10" />
-	<panel
-		title="List of existing indices - click on an index to work with it"
-		border="normal">
-		<toolbar>
-			<space width="20px" />
-			<button label="Refresh" forward="onListRefresh" />
-			<space width="20px" />
-		</toolbar>
-		<panelchildren>
-			<listbox id="indexlist" selectedItem="@{home.clientName}"
-				width="100%" mold="paging" pageSize="20"
-				model="@{home.clientCatalog}">
-				<auxhead>
-					<auxheader align="center" label="Index" />
-					<auxheader align="center" label="Crawlers"
-						colspan="3" />
-					<auxheader align="center" label="Scheduler"
-						colspan="3" />
-					<auxheader align="center" label="Replication"
-						colspan="2" />
-					<auxheader align="center" label="Opt."
-						tooltiptext="Optimization status" />
-					<auxheader align="center" label="Information"
-						colspan="3" />
-					<auxheader align="center" label="Action" />
-				</auxhead>
-				<listhead>
-					<listheader label="name" />
-					<listheader label="Web" align="center" hflex="min" />
-					<listheader label="Database" align="center"
-						hflex="min" />
-					<listheader label="File" align="center" hflex="min" />
-					<listheader label="- R -" hflex="min"
-						tooltiptext="Number of running jobs" align="center" />
-					<listheader label="- A -" hflex="min"
-						tooltiptext="Number of active jobs" align="center" />
-					<listheader label="- N -" hflex="min"
-						tooltiptext="Number of jobs" align="center" />
-					<listheader label="- R -" hflex="min"
-						tooltiptext="Number of replication items" align="center" />
-					<listheader label="- N -" hflex="min"
-						tooltiptext="Number of running replication items" align="center" />
-					<listheader label="status" hflex="min"
-						tooltiptext="Optimization status" align="center" />
-					<listheader label="Doc(s)" align="right"
-						hflex="min" />
-					<listheader label="Last modified" align="right"
-						hflex="min" />
-					<listheader label="Size" align="right" hflex="min" />
-					<listheader align="center" hflex="min" />
-				</listhead>
-				<listitem self="@{each='catalogitem'}">
-					<listcell label="@{catalogitem.indexName}" />
-					<listcell
-						tooltiptext="@{catalogitem.client.webCrawlMaster.statusInfo}"
-						label="@{catalogitem.client.webCrawlMaster.status}" />
-					<listcell
-						tooltiptext="@{catalogitem.client.databaseCrawlMaster.statusInfo}"
-						label="@{catalogitem.client.databaseCrawlMaster.status}" />
-					<listcell
-						tooltiptext="@{catalogitem.client.fileCrawlMaster.statusInfo}"
-						label="@{catalogitem.client.fileCrawlMaster.status}" />
-					<listcell
-						label="@{catalogitem.client.jobList.runningCount}" />
-					<listcell
-						label="@{catalogitem.client.jobList.activeCount}" />
-					<listcell
-						label="@{catalogitem.client.jobList.count}" />
-					<listcell
-						label="@{catalogitem.client.replicationMaster.threadsCount}" />
-					<listcell
-						label="@{catalogitem.client.replicationList.set.size}" />
-					<listcell label="@{catalogitem.optimizationStatus}" />
-					<listcell tooltiptext="@{catalogitem.numDocs}"
-						label="@{catalogitem.numDocs,converter='com.jaeksoft.searchlib.web.converter.IntegerConverter'}" />
-					<listcell
-						tooltiptext="@{catalogitem.lastModifiedFile}"
-						label="@{catalogitem.lastModified,converter='com.jaeksoft.searchlib.web.converter.DateConverter'}" />
-					<listcell tooltiptext="@{catalogitem.size}"
-						label="@{catalogitem.size,converter='com.jaeksoft.searchlib.web.converter.SizeConverter'}" />
-					<listcell>
-						<hbox align="center">
-							<button label="Info"
-								onClick="home.computeInfos(self)"
-								tooltiptext="Compute the size of the index">
-								<custom-attributes
-									catalogitem="@{catalogitem}" />
-							</button>
-							<space />
-							<button tooltiptext="Erase index"
-								image="/images/action_delete.png"
-								onClick="home.eraseIndex(self)">
-								<custom-attributes
-									catalogitem="@{catalogitem}" />
-							</button>
-							<space />
-						</hbox>
-					</listcell>
-				</listitem>
-			</listbox>
-		</panelchildren>
-	</panel>
-
+	<listbox id="indexlist" selectedItem="@{home.clientName}"
+		mold="paging" pageSize="20" model="@{home.clientCatalog}">
+		<auxhead>
+			<auxheader align="center" label="List of indices">
+				<button label="Refresh" forward="onListRefresh" />
+			</auxheader>
+			<auxheader align="center" label="Crawlers" colspan="3" />
+			<auxheader align="center" label="Scheduler" colspan="3" />
+			<auxheader align="center" label="Replication" colspan="2" />
+			<auxheader align="center" label="Opt."
+				tooltiptext="Optimization status" />
+			<auxheader align="center" label="Information" colspan="3" />
+			<auxheader align="center" label="Action" />
+		</auxhead>
+		<listhead>
+			<listheader label="name" />
+			<listheader label="Web" align="center" hflex="min" />
+			<listheader label="Database" align="center" hflex="min" />
+			<listheader label="File" align="center" hflex="min" />
+			<listheader label="- R -" hflex="min"
+				tooltiptext="Number of running jobs" align="center" />
+			<listheader label="- A -" hflex="min"
+				tooltiptext="Number of active jobs" align="center" />
+			<listheader label="- N -" hflex="min"
+				tooltiptext="Number of jobs" align="center" />
+			<listheader label="- R -" hflex="min"
+				tooltiptext="Number of replication items" align="center" />
+			<listheader label="- N -" hflex="min"
+				tooltiptext="Number of running replication items" align="center" />
+			<listheader label="status" hflex="min"
+				tooltiptext="Optimization status" align="center" />
+			<listheader label="Doc(s)" align="right" hflex="min" />
+			<listheader label="Last modified" align="right" hflex="min" />
+			<listheader label="Size" align="right" hflex="min" />
+			<listheader align="center" hflex="min" />
+		</listhead>
+		<listitem self="@{each='catalogitem'}">
+			<listcell label="@{catalogitem.indexName}" />
+			<listcell
+				tooltiptext="@{catalogitem.client.webCrawlMaster.statusInfo}"
+				label="@{catalogitem.client.webCrawlMaster.status}" />
+			<listcell
+				tooltiptext="@{catalogitem.client.databaseCrawlMaster.statusInfo}"
+				label="@{catalogitem.client.databaseCrawlMaster.status}" />
+			<listcell
+				tooltiptext="@{catalogitem.client.fileCrawlMaster.statusInfo}"
+				label="@{catalogitem.client.fileCrawlMaster.status}" />
+			<listcell
+				label="@{catalogitem.client.jobList.runningCount}" />
+			<listcell label="@{catalogitem.client.jobList.activeCount}" />
+			<listcell label="@{catalogitem.client.jobList.count}" />
+			<listcell
+				label="@{catalogitem.client.replicationMaster.threadsCount}" />
+			<listcell
+				label="@{catalogitem.client.replicationList.set.size}" />
+			<listcell label="@{catalogitem.optimizationStatus}" />
+			<listcell tooltiptext="@{catalogitem.numDocs}"
+				label="@{catalogitem.numDocs,converter='com.jaeksoft.searchlib.web.converter.IntegerConverter'}" />
+			<listcell tooltiptext="@{catalogitem.lastModifiedFile}"
+				label="@{catalogitem.lastModified,converter='com.jaeksoft.searchlib.web.converter.DateConverter'}" />
+			<listcell tooltiptext="@{catalogitem.size}"
+				label="@{catalogitem.size,converter='com.jaeksoft.searchlib.web.converter.SizeConverter'}" />
+			<listcell>
+				<hbox align="center">
+					<button label="Info"
+						onClick="home.computeInfos(self)"
+						tooltiptext="Compute the size of the index">
+						<custom-attributes catalogitem="@{catalogitem}" />
+					</button>
+					<space />
+					<button tooltiptext="Erase index"
+						image="/images/action_delete.png"
+						onClick="home.eraseIndex(self)">
+						<custom-attributes catalogitem="@{catalogitem}" />
+					</button>
+					<space />
+				</hbox>
+			</listcell>
+		</listitem>
+	</listbox>
 </window>
