--- a/WebContent/WEB-INF/zul/crawler/web/crawl.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/crawl.zul
@@ -16,205 +16,188 @@
 -->
 <window id="crawlProcess"
 	use="com.jaeksoft.searchlib.web.controller.crawler.web.CrawlWebController">
-	<panel title="Crawling parameters" collapsible="true"
-		border="normal"
-		visible="@{crawlProcess.webCrawlerParametersRights}">
-		<panelchildren>
-			<grid>
-				<columns>
-					<column align="right" />
-					<column />
-					<column align="right" />
-					<column />
-				</columns>
-				<rows>
-					<row>
-						<label value="User-Agent: " />
-						<textbox width="95%"
-							readonly="@{crawlProcess.refresh}"
-							value="@{crawlProcess.properties.userAgent.value}" />
-						<label value="Number of URLs to crawl: " />
-						<intbox constraint="no empty, no negative"
-							readonly="@{crawlProcess.refresh}"
-							value="@{crawlProcess.properties.maxUrlPerSession.value}" />
+	<grid visible="@{crawlProcess.webCrawlerParametersRights}"
+		sizedByContent="true">
+		<auxhead>
+			<auxheader colspan="4" label="Crawling parameters" />
+		</auxhead>
+		<columns visible="false">
+			<column align="right" />
+			<column />
+			<column align="right" />
+			<column />
+		</columns>
+		<rows>
+			<row>
+				<label value="User-Agent: " />
+				<textbox width="95%" readonly="@{crawlProcess.refresh}"
+					value="@{crawlProcess.properties.userAgent.value}" />
+				<label value="Number of URLs to crawl: " />
+				<intbox constraint="no empty, no negative"
+					readonly="@{crawlProcess.refresh}"
+					value="@{crawlProcess.properties.maxUrlPerSession.value}" />
 
-					</row>
-					<row>
-						<label
-							value="Fetch interval between re-fetches: " />
-						<hbox align="center">
-							<intbox constraint="no empty, no negative"
-								readonly="@{crawlProcess.refresh}"
-								value="@{crawlProcess.properties.fetchInterval.value}" />
-							<listbox
-								visible="@{crawlProcess.notRefresh}"
-								model="@{crawlProcess.fetchIntervalUnitValues}" mold="select"
-								selectedItem="@{crawlProcess.properties.fetchIntervalUnit.value}" />
-							<label visible="@{crawlProcess.refresh}"
-								value="@{crawlProcess.properties.fetchIntervalUnit.value}" />
-						</hbox>
-						<label
-							value="Maximum number of URLs per host: " />
-						<intbox constraint="no empty, no negative"
-							readonly="@{crawlProcess.refresh}"
-							value="@{crawlProcess.properties.maxUrlPerHost.value}" />
+			</row>
+			<row>
+				<label value="Fetch interval between re-fetches: " />
+				<hbox align="center">
+					<intbox constraint="no empty, no negative"
+						readonly="@{crawlProcess.refresh}"
+						value="@{crawlProcess.properties.fetchInterval.value}" />
+					<listbox visible="@{crawlProcess.notRefresh}"
+						model="@{crawlProcess.fetchIntervalUnitValues}" mold="select"
+						selectedItem="@{crawlProcess.properties.fetchIntervalUnit.value}" />
+					<label visible="@{crawlProcess.refresh}"
+						value="@{crawlProcess.properties.fetchIntervalUnit.value}" />
+				</hbox>
+				<label value="Maximum number of URLs per host: " />
+				<intbox constraint="no empty, no negative"
+					readonly="@{crawlProcess.refresh}"
+					value="@{crawlProcess.properties.maxUrlPerHost.value}" />
 
-					</row>
-					<row>
-						<label value="Number of simultaneous threads: " />
-						<intbox constraint="no empty, no negative"
-							readonly="@{crawlProcess.refresh}"
-							value="@{crawlProcess.properties.maxThreadNumber.value}" />
-						<label
-							value="Delay between each successive access, in seconds: " />
-						<intbox constraint="no empty, no negative"
-							readonly="@{crawlProcess.refresh}"
-							value="@{crawlProcess.properties.delayBetweenAccesses.value}" />
+			</row>
+			<row>
+				<label value="Number of simultaneous threads: " />
+				<intbox constraint="no empty, no negative"
+					readonly="@{crawlProcess.refresh}"
+					value="@{crawlProcess.properties.maxThreadNumber.value}" />
+				<label
+					value="Delay between each successive access, in seconds: " />
+				<intbox constraint="no empty, no negative"
+					readonly="@{crawlProcess.refresh}"
+					value="@{crawlProcess.properties.delayBetweenAccesses.value}" />
 
-					</row>
-				</rows>
-			</grid>
-		</panelchildren>
-	</panel>
+			</row>
+		</rows>
+	</grid>
 	<separator />
-	<panel title="Current status" collapsible="false" border="normal">
-		<toolbar>
-			<textbox readonly="true" cols="50"
-				value="@{crawlProcess.webCrawlMaster.statusInfo}" />
-			<space />
-			<button id="runButton"
-				visible="@{crawlProcess.webCrawlerStartStopRights}"
-				disabled="@{crawlProcess.webCrawlMaster.aborting}"
-				label="@{crawlProcess.runButtonLabel}" forward="onRun" />
-		</toolbar>
-	</panel>
+	<grid>
+		<columns>
+			<column label="Current status" />
+		</columns>
+		<rows>
+			<row>
+				<cell>
+					<textbox readonly="true" cols="50"
+						value="@{crawlProcess.webCrawlMaster.statusInfo}" />
+					<space />
+					<button id="runButton"
+						visible="@{crawlProcess.webCrawlerStartStopRights}"
+						disabled="@{crawlProcess.webCrawlMaster.aborting}"
+						label="@{crawlProcess.runButtonLabel}" forward="onRun" />
+				</cell>
+			</row>
+		</rows>
+	</grid>
 	<separator />
-	<panel title="Statistics for prior sessions" collapsible="true"
-		border="normal">
-		<panelchildren>
-			<listbox
-				model="@{crawlProcess.webCrawlMaster.statistics}">
-				<auxhead>
-					<auxheader label="Start time"
-						tooltiptext="Start time" />
-					<auxheader label="Fetched" tooltiptext="Fetched"
-						align="center" colspan="2" />
-					<auxheader align="center" colspan="2"
-						label="Old url host" tooltiptext="Old url host" />
-					<auxheader align="center" colspan="2"
-						label="New url host" tooltiptext="New url host" />
-					<auxheader label="Parsed" tooltiptext="Parsed" />
-					<auxheader align="center" colspan="2"
-						label="New url" tooltiptext="New url" />
-					<auxheader align="center" colspan="2"
-						label="Updated" tooltiptext="Updated" />
-					<auxheader label="Ignored" tooltiptext="Ignored" />
-					<auxheader align="center" colspan="2"
-						label="Deleted" tooltiptext="Deleted" />
-					<auxheader align="center" colspan="2" label="URL(s)"
-						tooltiptext="URL(s)" />
-				</auxhead>
-				<listhead sizable="true">
-					<listheader width="150px" />
-					<listheader label="Count" tooltiptext="Count" />
-					<listheader label="Rate" tooltiptext="Rate" />
-					<listheader label="Processed"
-						tooltiptext="Processed" />
-					<listheader label="Total" tooltiptext="Total" />
-					<listheader label="Processed"
-						tooltiptext="Processed" />
-					<listheader label="Total" tooltiptext="Total" />
-					<listheader />
-					<listheader label="Pending" tooltiptext="Pending" />
-					<listheader label="Committed"
-						tooltiptext="Committed" />
-					<listheader label="Pending" tooltiptext="Pending" />
-					<listheader label="Committed"
-						tooltiptext="Committed" />
-					<listheader />
-					<listheader label="Pending" tooltiptext="Pending" />
-					<listheader label="Committed"
-						tooltiptext="Committed" width="50px" />
-					<listheader label="Processed"
-						tooltiptext="Processed" />
-					<listheader label="Total" tooltiptext="Total" />
-				</listhead>
-				<listitem self="@{each=stat}">
-					<listcell label="@{stat.startDate}" />
-					<listcell label="@{stat.fetchedCount}" />
-					<listcell
-						label="@{stat.fetchRate, converter='com.jaeksoft.searchlib.web.converter.RateConverter'}" />
-					<listcell label="@{stat.oldHostCount}" />
-					<listcell label="@{stat.oldHostListSize}" />
-					<listcell label="@{stat.newHostCount}" />
-					<listcell label="@{stat.newHostListSize}" />
-					<listcell label="@{stat.parsedCount}" />
-					<listcell label="@{stat.pendingNewUrlCount}" />
-					<listcell label="@{stat.newUrlCount}" />
-					<listcell label="@{stat.pendingUpdatedCount}" />
-					<listcell label="@{stat.updatedCount}" />
-					<listcell label="@{stat.ignoredCount}" />
-					<listcell label="@{stat.pendingDeletedCount}" />
-					<listcell label="@{stat.deletedCount}" />
-					<listcell label="@{stat.urlCount}" />
-					<listcell label="@{stat.urlListSize}" />
-				</listitem>
-			</listbox>
-		</panelchildren>
-	</panel>
+	<listbox model="@{crawlProcess.webCrawlMaster.statistics}"
+		hflex="min">
+		<auxhead>
+			<auxheader colspan="18"
+				label="Statistics for prior sessions" />
+		</auxhead>
+		<auxhead>
+			<auxheader label="Start time" tooltiptext="Start time" />
+			<auxheader label="Fetched" tooltiptext="Fetched"
+				align="center" colspan="3" />
+			<auxheader align="center" colspan="2" label="Old url host"
+				tooltiptext="Old url host" />
+			<auxheader align="center" colspan="2" label="New url host"
+				tooltiptext="New url host" />
+			<auxheader label="Parsed" tooltiptext="Parsed" />
+			<auxheader align="center" colspan="2" label="New url"
+				tooltiptext="New url" />
+			<auxheader align="center" colspan="2" label="Updated"
+				tooltiptext="Updated" />
+			<auxheader label="Ignored" tooltiptext="Ignored" />
+			<auxheader align="center" colspan="2" label="Deleted"
+				tooltiptext="Deleted" />
+			<auxheader align="center" colspan="2" label="URL(s)"
+				tooltiptext="URL(s)" />
+		</auxhead>
+		<listhead>
+			<listheader />
+			<listheader label="Count" tooltiptext="Count" />
+			<listheader label="Cache" tooltiptext="From cache" />
+			<listheader label="Rate" tooltiptext="Rate" />
+			<listheader label="Processed" tooltiptext="Processed" />
+			<listheader label="Total" tooltiptext="Total" />
+			<listheader label="Processed" tooltiptext="Processed" />
+			<listheader label="Total" tooltiptext="Total" />
+			<listheader label="Count" />
+			<listheader label="Pending" tooltiptext="Pending" />
+			<listheader label="Committed" tooltiptext="Committed" />
+			<listheader label="Pending" tooltiptext="Pending" />
+			<listheader label="Committed" tooltiptext="Committed" />
+			<listheader />
+			<listheader label="Pending" tooltiptext="Pending" />
+			<listheader label="Committed" tooltiptext="Committed" />
+			<listheader label="Processed" tooltiptext="Processed" />
+			<listheader label="Total" tooltiptext="Total" />
+		</listhead>
+		<listitem self="@{each=stat}">
+			<listcell label="@{stat.startDate}" />
+			<listcell label="@{stat.fetchedCount}" />
+			<listcell label="@{stat.fromCacheCount}" />
+			<listcell
+				label="@{stat.fetchRate, converter='com.jaeksoft.searchlib.web.converter.RateConverter'}" />
+			<listcell label="@{stat.oldHostCount}" />
+			<listcell label="@{stat.oldHostListSize}" />
+			<listcell label="@{stat.newHostCount}" />
+			<listcell label="@{stat.newHostListSize}" />
+			<listcell label="@{stat.parsedCount}" />
+			<listcell label="@{stat.pendingNewUrlCount}" />
+			<listcell label="@{stat.newUrlCount}" />
+			<listcell label="@{stat.pendingUpdatedCount}" />
+			<listcell label="@{stat.updatedCount}" />
+			<listcell label="@{stat.ignoredCount}" />
+			<listcell label="@{stat.pendingDeletedCount}" />
+			<listcell label="@{stat.deletedCount}" />
+			<listcell label="@{stat.urlCount}" />
+			<listcell label="@{stat.urlListSize}" />
+		</listitem>
+	</listbox>
 	<separator />
-	<panel title="Thread list" collapsible="true" border="normal">
-		<panelchildren>
-			<listbox model="@{crawlProcess.webCrawlMaster.threads}"
-				mold="paging" pageSize="20">
-				<listhead sizable="true">
-					<listheader label="Current host name"
-						tooltiptext="Current host name" />
-					<listheader width="60px" label="Type"
-						tooltiptext="Type" />
-					<listheader width="60px" label="Fetched"
-						tooltiptext="Fetched" />
-					<listheader width="60px" label="Rate"
-						tooltiptext="Fetch rate" />
-					<listheader width="60px" label="New url"
-						tooltiptext="New url" />
-					<listheader width="60px" label="Updated"
-						tooltiptext="Updated" />
-					<listheader width="60px" label="Ignored"
-						tooltiptext="Ignored" />
-					<listheader width="60px" label="Deleted"
-						tooltiptext="Deleted" />
-					<listheader width="60px" label="URL(s)"
-						tooltiptext="URL(s)" />
-					<listheader width="60px" label="Total"
-						tooltiptext="Total" />
-					<listheader label="Status" tooltiptext="Status" />
-				</listhead>
-				<listitem self="@{each=thread}">
-					<listcell
-						label="@{thread.hostUrlList.namedItem.name}" />
-					<listcell label="@{thread.hostUrlList.listType}" />
-					<listcell
-						label="@{thread.currentStatistics.fetchedCount}" />
-					<listcell
-						label="@{thread.currentStatistics.fetchRate, converter='com.jaeksoft.searchlib.web.converter.RateConverter'}" />
-					<listcell
-						label="@{thread.currentStatistics.pendingNewUrlCount}" />
-					<listcell
-						label="@{thread.currentStatistics.pendingUpdatedCount}" />
-					<listcell
-						label="@{thread.currentStatistics.ignoredCount}" />
-					<listcell
-						label="@{thread.currentStatistics.pendingDeletedCount}" />
-					<listcell
-						label="@{thread.currentStatistics.urlCount}" />
-					<listcell
-						label="@{thread.currentStatistics.urlListSize}" />
-					<listcell label="@{thread.statusInfo}" />
-				</listitem>
-			</listbox>
-		</panelchildren>
-	</panel>
+	<listbox model="@{crawlProcess.webCrawlMaster.threads}"
+		mold="paging" pageSize="20" hflex="min">
+		<auxhead>
+			<auxheader colspan="12" label="Thread list" />
+		</auxhead>
+		<listhead>
+			<listheader label="Current host name"
+				tooltiptext="Current host name" />
+			<listheader label="Type" tooltiptext="Type" />
+			<listheader label="Fetched" tooltiptext="Fetched" />
+			<listheader label="Cache" tooltiptext="From cache" />
+			<listheader label="Rate" tooltiptext="Fetch rate" />
+			<listheader label="New url" tooltiptext="New url" />
+			<listheader label="Updated" tooltiptext="Updated" />
+			<listheader label="Ignored" tooltiptext="Ignored" />
+			<listheader label="Deleted" tooltiptext="Deleted" />
+			<listheader label="URL(s)" tooltiptext="URL(s)" />
+			<listheader label="Total" tooltiptext="Total" />
+			<listheader label="Status" tooltiptext="Status" />
+		</listhead>
+		<listitem self="@{each=thread}">
+			<listcell label="@{thread.hostUrlList.namedItem.name}" />
+			<listcell label="@{thread.hostUrlList.listType}" />
+			<listcell label="@{thread.currentStatistics.fetchedCount}" />
+			<listcell
+				label="@{thread.currentStatistics.fromCacheCount}" />
+			<listcell
+				label="@{thread.currentStatistics.fetchRate, converter='com.jaeksoft.searchlib.web.converter.RateConverter'}" />
+			<listcell
+				label="@{thread.currentStatistics.pendingNewUrlCount}" />
+			<listcell
+				label="@{thread.currentStatistics.pendingUpdatedCount}" />
+			<listcell label="@{thread.currentStatistics.ignoredCount}" />
+			<listcell
+				label="@{thread.currentStatistics.pendingDeletedCount}" />
+			<listcell label="@{thread.currentStatistics.urlCount}" />
+			<listcell label="@{thread.currentStatistics.urlListSize}" />
+			<listcell label="@{thread.statusInfo}" />
+		</listitem>
+	</listbox>
 	<timer delay="5000" repeats="true" onTimer="crawlProcess.onTimer()"
 		running="@{crawlProcess.refresh}" />
 </window>
