- Fix missing word in UI of crawl process - Fix an issue on cache statistics

--- a/WebContent/WEB-INF/zul/crawler/web/crawl.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/crawl.zul
@@ -129,7 +129,7 @@
 			<listheader label="Committed" tooltiptext="Committed" />
 			<listheader label="Pending" tooltiptext="Pending" />
 			<listheader label="Committed" tooltiptext="Committed" />
-			<listheader />
+			<listheader label="Count" />
 			<listheader label="Pending" tooltiptext="Pending" />
 			<listheader label="Committed" tooltiptext="Committed" />
 			<listheader label="Processed" tooltiptext="Processed" />
